--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -398,6 +398,11 @@ The third step of the scientific method (see § \ref{sci-method}) requires guess
 \caption{Source and credits to: Haltopub, from \href{https://en.wikipedia.org/wiki/File:Ouroboros-benzene.svg}{Wikimedia}.}\label{fig:ouroboros}
 \end{figure}
 
+\hypertarget{neptune-vulcan}{%
+\subsection{Neptune and Vulcan}\label{neptune-vulcan}}
+
+{[}to be added{]}
+
 \hypertarget{scientific-inference}{%
 \chapter{Scientific Inference}\label{scientific-inference}}
 
@@ -1090,6 +1095,11 @@ Another problem arises with regard to Popper's falsification approach. We cannot
 \begin{quote}
 In the case of Amazon the false hypothesis and background assumptions were found rather quickly. But there could be more subtle biases around us which we are not yet aware. This again shows the twofold consequences in terms of inductive risk: The danger of scientists implementing these biases into the algorithms and the benefit of amplifying these biases, and thus making them visible to us. --- \citep{fischer_2020}
 \end{quote}
+
+\hypertarget{eddington-expeditions}{%
+\subsection{Eddington expeditions}\label{eddington-expeditions}}
+
+{[}to be added{]} example for falsification
 
 \hypertarget{wont-fix}{%
 \chapter{Extra Material}\label{wont-fix}}
